--- a/scss/project/_ticket.scss
+++ b/scss/project/_ticket.scss
@@ -1,334 +1,332 @@
-.page-slug-tickets{
-	.tix_tickets_table{
-		tr{
-			display: block;
-			width: 100%;
-			border: 1px solid #eee;
-			border-bottom: 2px solid #eee!important;
-			margin-bottom: 12px;
-			@media screen and (min-width: 48em) {
-      	border: none;
-				border-bottom: 1px solid rgba(52,175,165,0.5)!important;
-				margin-bottom: 0;
-    	}
-		}
-		
-		thead{
-			display: none;
-			font-size: 0;
-			@media screen and (min-width: 48em) {
-				display: block;
-    	}
-			
-			th{
-				display: inline-block;
-				font-size: 0.85rem;
-			}
-			
-			.tix-column-description{
-				width: 62%;
-			}
-			
-			.tix-column-price{
-				width: 16%;
-			}
-			
-			.tix-column-remaining{
-				width: 10%;
-			}
-			
-			.tix-column-quantity{
-				width: 12%;
-			}
-			
-		}
-			
-		tbody{
-			display: block;
-			width: 100%;
-			overflow: hidden;
-			font-size: 0;
-			
-			td{
-				font-size: 0.85rem;
-				@media screen and (min-width: 48em) {
-					padding: 1rem 1rem!important;
-				}
-			}
-			
-			.tix-column-description{
-				border-top: 5px solid rgba(52, 175, 165, 0.75);
-				width: 100%;
-				display: block;
-				position: relative;
-				font-size: 1rem;
-				line-height: 1.4;
-				@media screen and (min-width: 48em) {
-        	border-top: none;
-					width: 62%;
-					display: inline-block;
-    		}
-				
-				&::after{
-					content:"";
-					position: absolute;
-					width: 95%;
-					left: 2.5%;
-					bottom: 0;
-					border-bottom: 1px solid #eee;
-					@media screen and (min-width: 48em) {
-						content:none;
-    			}
-				}
-				.tix-ticket-excerpt{
-					font-size: 0.75rem;
-					color: #666666;
-				}
-			}
-			
-			.tix-column-price{
-				width: 42%;
-				display: inline-block;
-				font-size: 0.85rem;
-				font-weight: bold;
-				@media screen and (min-width: 48em) {
-					width: 16%;
-					display: inline-block;
-					font-weight: normal;
-    		}
-			}
-			
-			.tix-column-remaining{
-				overflow: visible;
-				width: 35%;
-				text-align: right;
-				font-weight:bold;
-				display: inline-block;
-				font-size: 0.85rem;
-				@media screen and (min-width: 48em) {
-					width: 10%;
-					display: inline-block;
-					font-weight: normal;
-					text-align: left;
-    		}
+.page-slug-tickets {
+    .tix_tickets_table {
+        tr {
+            display: block;
+            width: 100%;
+            border: 1px solid #eee;
+            border-bottom: 2px solid #eee !important;
+            margin-bottom: 12px;
+            @media screen and (min-width: 48em) {
+                border: none;
+                border-bottom: 1px solid rgba(52, 175, 165, 0.5) !important;
+                margin-bottom: 0;
+            }
+        }
 
-				&::before{
-					content:"残数";
-					font-size: 0.75rem;
-					color:#666;
-					padding-right: 2px;
-					font-weight: normal;
-					@media screen and (min-width: 48em) {
-						content:none;
-    			}
-				}
-			}
-			
-			.tix-column-quantity{
-				width: 23%;
-				display: inline-block;
-				font-size: 0.85rem;
-				text-align: right;
-					@media screen and (min-width: 48em) {
-						width:12%;
-						text-align: left;
-    			}
-				
-				select{
-					width: 50px;
-					height: 38px;
-					background: rgba(52, 175, 165, 0.1);
-					text-align: center;
-				}
-			}
-			
-			tr.tix-row-coupon{
-				border: none;
-				border-bottom: none!important;
-				margin-bottom: 0;
-				font-size: 14px;
-				@media screen and (min-width: 48em) {
-						border-bottom: 1px solid rgba(52, 175, 165, 0.5) !important;;
-    			}
-			}
+        thead {
+            display: none;
+            font-size: 0;
+            @media screen and (min-width: 48em) {
+                display: block;
+            }
 
-		}
-	}
-	
-	input[type="submit"]{
-		width: 100%;
-		margin: 0 auto;
-		@include btn-link(inline-block);
-		border-radius: 4px;
-		font-weight:normal;
-		font-size: 1rem;
-		@media screen and (min-width: 48em) {
-			width: 150px;
-			font-size: 0.85rem;
-		}
-		&:active{
-			@include btn-link(inline-block);
-			border-radius: 4px;
-			font-weight:normal;
-		}
-	}
-	
-	
-	.tix-order-summary{
-		thead{
+            th {
+                display: inline-block;
+                font-size: 0.85rem;
+            }
 
-			.tix-column-description{
-				width: 52%;
-			}
-			
-			.tix-column-per-ticket{
-				width: 22%;
-			}
-			
-			.tix-column-quantity{
-				width: 8%;
-			}
+            .tix-column-description {
+                width: 62%;
+            }
 
-			.tix-column-price{
-				width: 18%;
-			}
-			
-		}
-		
-		tbody{
+            .tix-column-price {
+                width: 16%;
+            }
 
-			td{
-				font-size: 0.85rem;
-				@media screen and (min-width: 48em) {
-					padding: 1rem 1rem!important;
-				}
-			}			
-			
-			.tix-column-description{
-				@media screen and (min-width: 48em) {
-					width: 52%;
-    		}
-			}
-			
-			.tix-column-per-ticket{
-				width: 34%;
-				display: inline-block;
-				font-size: 0.85rem;
-				font-weight: bold;
-				@media screen and (min-width: 48em) {
-					width: 22%;
-					display: inline-block;
-					font-weight: normal;
-    		}
-			}
-			
-			.tix-column-quantity{
-				width: 26%;
-				@media screen and (min-width: 48em) {
-					width: 8%;
-    		}
+            .tix-column-remaining {
+                width: 10%;
+            }
 
-				&::before{
-					content:"数量";
-					font-size: 0.75rem;
-					color:#666;
-					padding-right: 2px;
-					font-weight: normal;
-					@media screen and (min-width: 48em) {
-						content:none;
-    			}
-				}
-			}
-			
-			.tix-column-price{
-				width: 40%;
-					@media screen and (min-width: 48em) {
-						width:18%;
-    			}
-				&::before{
-					content:"価格";
-					font-size: 0.75rem;
-					color:#666;
-					padding-right: 2px;
-					font-weight: bold;
-					@media screen and (min-width: 48em) {
-						content:none;
-    			}
-				}
-			}
-			
-			tr.tix-row-total{
-				border: none;
-				border-bottom: none!important;
-				margin-bottom: 0;
-				font-size: 14px;
-				width: 100%;
+            .tix-column-quantity {
+                width: 12%;
+            }
 
-				td:first-child{
-					width: 83.2%;
-				}
-				
-				td:nth-child(2){
-					&::before{
-						content:"計";
-						font-size: 0.75rem;
-						color:#666;
-						padding-right: 2px;
-						font-weight: bold;
-						@media screen and (min-width: 48em) {
-							content:none;
-    				}
-					}
-				}
-				
-				@media screen and (min-width: 48em) {
-						border-bottom: 1px solid rgba(52, 175, 165, 0.5) !important;;
-    			}
-			}
-		}
-	}
-	
-	.tix-attendee-form{
-		font-size: 14px;
-		
-		tr{
-			border: none;
-			border-bottom: none!important;
-			margin-bottom: 0px;
-		}
-		
-		td.tix-left{
-			width: 100%;
-			display: block;
-			@media screen and (min-width: 48em) {
-				width: 150px;
-				display: inline-block;
-				vertical-align: middle;
-    	}
-		}
-		
-		.tix-right{
-			width:100%;
-			display: block;
-			@media screen and (min-width: 48em) {
-				width: calc(100% - 150px);
-				display: inline-block;
-				vertical-align: middle;
-    	}
-			
-			input{
-				width: 100%;
-			}
-		}
-	}
-	
-	.tix-submit{
-		select{
-			width: 100px;
-			height: 38px;
-			background: rgba(52, 175, 165, 0.1);
-			text-align: center;
-			margin-bottom: 10px;
-		}		
-	}
+        }
+
+        tbody {
+            display: block;
+            width: 100%;
+            overflow: hidden;
+            font-size: 0;
+
+            td {
+                font-size: 0.85rem;
+                @media screen and (min-width: 48em) {
+                    padding: 1rem 1rem !important;
+                }
+            }
+
+            .tix-column-description {
+                border-top: 5px solid rgba(52, 175, 165, 0.75);
+                width: 100%;
+                display: block;
+                position: relative;
+                font-size: 1rem;
+                line-height: 1.4;
+                @media screen and (min-width: 48em) {
+                    border-top: none;
+                    width: 62%;
+                    display: inline-block;
+                }
+
+                &::after {
+                    content: "";
+                    position: absolute;
+                    width: 95%;
+                    left: 2.5%;
+                    bottom: 0;
+                    border-bottom: 1px solid #eee;
+                    @media screen and (min-width: 48em) {
+                        content: none;
+                    }
+                }
+                .tix-ticket-excerpt {
+                    font-size: 0.75rem;
+                    color: #666666;
+                }
+            }
+
+            .tix-column-price {
+                width: 42%;
+                display: inline-block;
+                font-size: 0.85rem;
+                font-weight: bold;
+                @media screen and (min-width: 48em) {
+                    width: 16%;
+                    display: inline-block;
+                    font-weight: normal;
+                }
+            }
+
+            .tix-column-remaining {
+                overflow: visible;
+                width: 35%;
+                text-align: right;
+                font-weight: bold;
+                display: inline-block;
+                font-size: 0.85rem;
+                @media screen and (min-width: 48em) {
+                    width: 10%;
+                    display: inline-block;
+                    font-weight: normal;
+                    text-align: left;
+                }
+
+                &::before {
+                    content: "残数";
+                    font-size: 0.75rem;
+                    color: #666;
+                    padding-right: 2px;
+                    font-weight: normal;
+                    @media screen and (min-width: 48em) {
+                        content: none;
+                    }
+                }
+            }
+
+            .tix-column-quantity {
+                width: 23%;
+                display: inline-block;
+                font-size: 0.85rem;
+                text-align: right;
+                @media screen and (min-width: 48em) {
+                    width: 12%;
+                    text-align: left;
+                }
+
+                select {
+                    width: 50px;
+                    height: 38px;
+                    background: rgba(52, 175, 165, 0.1);
+                    text-align: center;
+                }
+            }
+
+            tr.tix-row-coupon {
+                border: none;
+                border-bottom: none !important;
+                margin-bottom: 0;
+                font-size: 14px;
+                @media screen and (min-width: 48em) {
+                    border-bottom: 1px solid rgba(52, 175, 165, 0.5) !important;;
+                }
+            }
+
+        }
+    }
+
+    input[type="submit"] {
+        width: 100%;
+        margin: 0 auto;
+        @include btn-link(inline-block);
+        border-radius: 4px;
+        font-weight: normal;
+        font-size: 1rem;
+        @media screen and (min-width: 48em) {
+            width: 150px;
+            font-size: 0.85rem;
+        }
+        &:active {
+            @include btn-link(inline-block);
+            border-radius: 4px;
+            font-weight: normal;
+        }
+    }
+
+    .tix-order-summary {
+        thead {
+
+            .tix-column-description {
+                width: 52%;
+            }
+
+            .tix-column-per-ticket {
+                width: 22%;
+            }
+
+            .tix-column-quantity {
+                width: 8%;
+            }
+
+            .tix-column-price {
+                width: 18%;
+            }
+
+        }
+
+        tbody {
+            td {
+                font-size: 0.85rem;
+                @media screen and (min-width: 48em) {
+                    padding: 1rem 1rem !important;
+                }
+            }
+
+            .tix-column-description {
+                @media screen and (min-width: 48em) {
+                    width: 52%;
+                }
+            }
+
+            .tix-column-per-ticket {
+                width: 34%;
+                display: inline-block;
+                font-size: 0.85rem;
+                font-weight: bold;
+                @media screen and (min-width: 48em) {
+                    width: 22%;
+                    display: inline-block;
+                    font-weight: normal;
+                }
+            }
+
+            .tix-column-quantity {
+                width: 26%;
+                @media screen and (min-width: 48em) {
+                    width: 8%;
+                }
+
+                &::before {
+                    content: "数量";
+                    font-size: 0.75rem;
+                    color: #666;
+                    padding-right: 2px;
+                    font-weight: normal;
+                    @media screen and (min-width: 48em) {
+                        content: none;
+                    }
+                }
+            }
+
+            .tix-column-price {
+                width: 40%;
+                @media screen and (min-width: 48em) {
+                    width: 18%;
+                }
+                &::before {
+                    content: "価格";
+                    font-size: 0.75rem;
+                    color: #666;
+                    padding-right: 2px;
+                    font-weight: bold;
+                    @media screen and (min-width: 48em) {
+                        content: none;
+                    }
+                }
+            }
+
+            tr.tix-row-total {
+                border: none;
+                border-bottom: none !important;
+                margin-bottom: 0;
+                font-size: 14px;
+                width: 100%;
+
+                td:first-child {
+                    width: 83.2%;
+                }
+
+                td:nth-child(2) {
+                    &::before {
+                        content: "計";
+                        font-size: 0.75rem;
+                        color: #666;
+                        padding-right: 2px;
+                        font-weight: bold;
+                        @media screen and (min-width: 48em) {
+                            content: none;
+                        }
+                    }
+                }
+
+                @media screen and (min-width: 48em) {
+                    border-bottom: 1px solid rgba(52, 175, 165, 0.5) !important;;
+                }
+            }
+        }
+    }
+
+    .tix-attendee-form {
+        font-size: 14px;
+
+        tr {
+            border: none;
+            border-bottom: none !important;
+            margin-bottom: 0px;
+        }
+
+        td.tix-left {
+            width: 100%;
+            display: block;
+            @media screen and (min-width: 48em) {
+                width: 150px;
+                display: inline-block;
+                vertical-align: middle;
+            }
+        }
+
+        .tix-right {
+            width: 100%;
+            display: block;
+            @media screen and (min-width: 48em) {
+                width: calc(100% - 150px);
+                display: inline-block;
+                vertical-align: middle;
+            }
+
+            input {
+                width: 100%;
+            }
+        }
+    }
+
+    .tix-submit {
+        select {
+            width: 100px;
+            height: 38px;
+            background: rgba(52, 175, 165, 0.1);
+            text-align: center;
+            margin-bottom: 10px;
+        }
+    }
 }
