--- a/scss/project/_ticket.scss
+++ b/scss/project/_ticket.scss
@@ -173,6 +173,11 @@
         }
     }
 
+    input[type="radio"],
+    input[type="checkbox"] {
+        width: auto;
+    }
+
     .tix-order-summary {
         thead {
 
