--- a/scss/project/_ticket.scss
+++ b/scss/project/_ticket.scss
@@ -296,9 +296,9 @@
         }
 
         td {
-            padding: 0;
+            padding: 0 !important;
             @media screen and (min-width: 48em) {
-                padding: 1rem;
+                padding: 1rem !important;
             }
             &.tix-left {
                 width: 100%;
