--- a/scss/project/_ticket.scss
+++ b/scss/project/_ticket.scss
@@ -296,7 +296,7 @@
         }
 
         td {
-            padding: 0 !important;
+            padding: 0 0 1rem !important;
             @media screen and (min-width: 48em) {
                 padding: 1rem !important;
             }
