--- a/scss/project/_ticket.scss
+++ b/scss/project/_ticket.scss
@@ -48,6 +48,10 @@
             width: 100%;
             overflow: hidden;
             font-size: 0;
+					
+						th {
+								font-size: 1rem;
+						}
 
             td {
                 font-size: 0.85rem;
@@ -297,6 +301,10 @@
             border-bottom: none !important;
             margin-bottom: 0;
         }
+			
+				th {
+					font-size: 1rem;
+				}
 
         td {
             padding: 0 0 1rem !important;
