フッターロゴ再修正

--- a/scss/global/_footer.scss
+++ b/scss/global/_footer.scss
@@ -33,7 +33,7 @@
     a{
         position: relative;
     }
-    &::after{
+    &::before{
         z-index: 2;
         display: block;
         position: absolute;
