--- a/scss/global/_footer.scss
+++ b/scss/global/_footer.scss
@@ -30,6 +30,7 @@
     float: none;
     text-align: center;
     padding-top: 30px;
+    position:relative;
     a{
         position: relative;
     }
@@ -40,6 +41,7 @@
         background: #fff;
         color: $color-green;
         font-size: 40px;
+        line-height:50px;
         content: "\f120";
         font-family: dashicons;
         text-indent: 0;
@@ -47,7 +49,7 @@
         width: 50px;
         height: 50px;
         border-radius: 50%;
-        bottom: 70px;
+        top: -25px;
         left: 50%;
         -ms-transform: translateX(-50%);
         transform: translateX(-50%)
